# tradingUnview

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/core/: __init__.py  config.py  logger.py  models.py
src/core/exchange/: __init__.py  base.py  binance.py  bybit.py
src/services/: __init__.py  analyzer.py  fetcher.py  strategy.py  trader.py
